src/objects/ddrive__Donation__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Card_Type__c</fullName>
        <label>Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Check_Number__c</fullName>
        <label>Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Donations</relationshipLabel>
        <relationshipName>DD_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Credit_Card_Authorization_Code__c</fullName>
        <label>Credit Card Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Original_Processing_Fee_Amount__c</fullName>
        <label>Original Processing Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Date_Entered__c</fullName>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Amount_Visibility__c</fullName>
        <label>Donation Amount Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Donation Is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donation Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Option__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donation Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Payment_Status_Text__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Recurring_Cancel_Date__c</fullName>
        <description>Donation Recurring Cancel Date</description>
        <label>Donation Recurring Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Recurring_Payment_Count__c</fullName>
        <description>Donation Recurring Payment Count</description>
        <label>Donation Recurring Payment Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Donation_Last_Modified__c</fullName>
        <label>Donation Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Donor_Display_Name__c</fullName>
        <label>Donor Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Gift_Description__c</fullName>
        <label>Gift Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Matching_Employer__c</fullName>
        <label>Matching Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Constituent_ID__c</fullName>
        <label>Participant Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Personal_Campaign_Name__c</fullName>
        <label>Personal Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Processing_Fee_Paid__c</fullName>
        <label>Processing Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Processing_Fee_Refund_Amount__c</fullName>
        <label>Processing Fee Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Recurring_Profile_ID__c</fullName>
        <label>Recurring Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Address_1__c</fullName>
        <label>Team Captain Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Address_2__c</fullName>
        <label>Team Captain Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_City__c</fullName>
        <label>Team Captain City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Constituent_ID__c</fullName>
        <label>Team Captain Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Country__c</fullName>
        <label>Team Captain Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Email__c</fullName>
        <label>Team Captain Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Postal_Code__c</fullName>
        <label>Team Captain Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_State__c</fullName>
        <label>Team Captain State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain__c</fullName>
        <label>Team Captain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_ID__c</fullName>
        <label>Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Name__c</fullName>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Type__c</fullName>
        <label>Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Address_1__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Address_2__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Business_Phone_Extension_text__c</fullName>
        <label>Donor Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Business_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Constituent_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Constituent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Constituent_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Entered_By__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Entered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_First_Name__c</fullName>
        <label>Donor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Home_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Last_Name__c</fullName>
        <label>Donor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Middle_Initial__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Mobile_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Name_Visibility__c</fullName>
        <label>Donor Name Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Postal_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Previous_Receipt_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Previous Receipt Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor__c</fullName>
        <label>Constituent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Donor is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_End_Date_Time__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Fiscal_Year__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Organization_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Program_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Site_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Start_Date_Time__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Status__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Venue__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Matching_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Original_Donation_Amount__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Original Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Address_1__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Address_2__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Business_Phone_Extension_txt__c</fullName>
        <label>Participant Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Business_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_First_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Home_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Last_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Middle_Initial__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Mobile_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Postal_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Payment_Desc__c</fullName>
        <label>Payment Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Receipt_Id__c</fullName>
        <label>Receipt Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Host__c</fullName>
        <label>Referrer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Path__c</fullName>
        <label>Referrer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Token__c</fullName>
        <label>Referrer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Registration_Fee_Promo_Code__c</fullName>
        <label>Registration Fee Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Registration_Fee__c</fullName>
        <label>Registration Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__SourceText__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Ticket_Desc__c</fullName>
        <label>Ticket Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Ticket_Quantity__c</fullName>
        <label>Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Donation</label>
    <listViews>
        <fullName>All_DD_Donations</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Billing_Name__c</columns>
        <columns>ddrive__Amount__c</columns>
        <columns>ddrive__Donor_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ddrive__Configuration__c</columns>
        <columns>ddrive__Donor__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All DD Donations_Detail_Report</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>